# trufotbot

./: .clippy.toml  .cspell.yml  .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  README.md  REUSE.toml  build.rs  cspell.json  justfile  mkdocs.yml  project-words.txt  requirements-docs.txt
.github/: release-drafter.yml
.github/workflows/: docker.yml  mkdocs-preview.yml  mkdocs.yml  release-drafter.yml  reuse.yml  rust.yml  spellcheck.yml  vue.yml
assets/: .gitignore
dockerdb/: prod.db
docs/: .markdownlint.jsonc  api-client.md  development.md  environment-variables.md  getting-started.md  index.md  interacting.md  release.md  telegram-setup.md
frontend/: .editorconfig  .gitattributes  .gitignore  .prettierignore  Cargo.toml  README.md  env.d.ts  eslint.config.ts  index.html  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  trufotbot-openapi.json  vite.config.ts  vitest.config.ts
frontend/e2e/: dose-noninteger.spec.ts  form-submit.spec.ts  medication-limits.spec.ts  username-warning.spec.ts  vue.spec.ts
frontend/src/: App.vue  error_handling.rs  errors.ts  main.rs  main.ts  model.rs  routes.rs  time.rs  username.rs  username.ts
frontend/src/assets/: main.scss
frontend/src/components/: AppLogo.vue  DaylightSavingsWarning.vue  DisplayQuantity.vue  DoseDetails.vue  DoseLimitsEditor.vue  MedicationDetails.vue  NoUserConfiguredWarning.vue  PatientList.vue  PatientMedicationSummaryCard.vue  PatientSettings.vue  RelativeTime.vue  dose.rs  dose_edit.rs  home.rs  medication_edit.rs  mod.rs  patient_detail.rs  patient_list.rs  patient_medication_detail.rs  patient_settings.rs
frontend/src/components/__tests__/: DisplayQuantity.spec.ts  RelativeTime.spec.ts
frontend/src/openapi/: client.gen.ts  sdk.gen.ts  transformers.gen.ts  types.gen.ts
frontend/src/router/: index.ts
frontend/src/views/: DoseEditView.vue  HomeView.vue  PatientDetailView.vue  PatientMedicationDetailView.vue
migrations/: 20250420210459_initial_schema.sql  20250730232915_add_message_id_to_dose.down.sql  20250730232915_add_message_id_to_dose.up.sql  20251027202832_add_telegram_message_time_to_doses.down.sql  20251027202832_add_telegram_message_time_to_doses.up.sql
server/: Cargo.toml
server/migrations/: 20250420210459_initial_schema.sql  20250730232915_add_message_id_to_dose.up.sql
server/src/: autocomplete.rs  dose_limits.rs  errors.rs  frontend_url.rs  main.rs  models.rs  next_doses.rs  reminder_scheduler.rs  seed.rs  storage.rs  telegram_bot.rs
server/src/app_state/: fake_telegram.rs  mod.rs  telegram.rs  telegram_impl.rs
server/src/fixtures/: dose_limits.sql  medications.sql  patients.sql
server/src/handlers/: doses.rs  medication.rs  mod.rs  patients.rs  reminders.rs
server/src/handlers/patient/: doses.rs  mod.rs  remind.rs
server/src/messenger/: callbacks.rs  fake_sender.rs  fake_telegram.rs  mod.rs  nil_sender.rs  telegram_impl.rs  telegram_sender.rs
shared/: Cargo.toml
shared/src/: lib.rs  time.rs
shared/src/api/: dose.rs  medication.rs  mod.rs  patient.rs  patient_types.rs  requests.rs  responses.rs
src/: autocomplete.rs  dose_limits.rs  errors.rs  main.rs  main.rs.old  models.rs  next_doses.rs  reminder_scheduler.rs  seed.rs  storage.rs  telegram_bot.rs  test_utils.rs  time.rs
src/api/: dose.rs  medication.rs  mod.rs  patient.rs  requests.rs  responses.rs
src/app_state/: mod.rs
src/fixtures/: medications.sql  patients.sql
src/handlers/: doses.rs  medication.rs  mod.rs  patients.rs  reminders.rs  status.rs
src/messenger/: callbacks.rs  fake_sender.rs  mod.rs  nil_sender.rs  telegram_sender.rs
