[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo-console = "0.3.0"
gloo-net = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen-futures = "0.4.50"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
shared = { path = "../shared" }
chrono = { version = "0.4.40", features = ["serde"] }
web-sys = "0.3.77"
anyhow = "1.0.98"
gloo-storage = "0.3.0"
serde_url_params = "0.2.1"
gloo-dialogs = "0.2.0"
cron-descriptor = "0.1.1"
cron = "0.15.0"
