[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.40", features = ["serde"] }
chrono-humanize = { version = "0.2.3", features = ["wasmbind"] }
serde = "1.0.219"
utoipa = { version = "5.4.0", features = ["macros", "chrono"] }

[dev-dependencies]
rstest = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
